--- a/style.css
+++ b/style.css
@@ -4,21 +4,36 @@
 
 .header{
     background-color: white;
+   
 }
+
+
+
+.titre{
+    text-align: center;
+    color: black
+   
+}
+
+
+
+
 
 
 .nav{
     display: flex;
     justify-content: center;
-    gap: 10%;
+    gap: 20%;
     background-color: white;
+    list-style: none;
+    margin-right: 10%;
     
 }
 .gants{
     width: 100%;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.87);
-   padding-top: 10%;
+    padding-top: 10%;
 
 }
 
@@ -89,23 +104,98 @@
   width: 100%
 }
 
-.icone{
-    display: flex;
-   justify-content: space-between;
-    width: 20%;
-}
+
+
 
 .lesicones{
+  
     flex-wrap: wrap;
     display: flex;
     justify-content:space-around ;
     width: 100%;
+    background-color: rgb(73, 72, 72)
+    
+    
 }
     
 .livre{
    flex-direction: column;
 }
 
+.iconezero{
+    justify-content: space-between;
+    display: flex;
+    width: 90%;
+    margin: 20%;
+    gap: 35%;
+    margin-top: 20%;
+
+   
+}
+
+.camion{
+    justify-content: space-between;
+    display: flex;
+
+}
+
+.icone1{
+    justify-content: space-between;
+    display: flex;
+    width: 90%;
+    margin: 20%;
+    gap: 35%;
+    margin-top: 20%;
+}
+
+.reseaux{
+    justify-content: space-between;
+    display: flex;
+    width: 80%;
+    margin: 30%; 
+    position: relative;
+   
+}
+
+.ligne{
+    width: 80%;
+    
+}
+
+.nav2 {
+    margin: -4%;
+    width: 80%;
+    position:absolute;
+    background-color:white;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    border-radius: 35%;
+    list-style: none;
+    gap: 5%;
+    margin-left: 5%;
+    padding: 4%;
+}
+   
+.titre span{
+    color: orange;
+}
+ 
+.lorem{
+    color: white;
+}
+
+.footer{
+    color: white;
+}
+    
+
+   
+    
+    
+
+ 
+   
 
     
 
